--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.1",
+    "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.10"
   },
   "devDependencies": {
