Ajustes e otimização  na área 'entrega' do carrinho com adição do hook form e zod

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^5.16.7",
     "framer-motion": "^11.3.28",
     "leaflet": "^1.9.4",
@@ -23,7 +24,8 @@
     "react-router-dom": "^6.26.1",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
-    "swiper": "^11.1.10"
+    "swiper": "^11.1.10",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
